--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "outDir": "./dist",
     "allowJs": true,
+    "esModuleInterop": true,
     "module": "commonjs",
     "target": "es2018"
   },
