--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "author": "Evan Tahler <evantahler@gmail.com>",
-  "name": "node-resque",
+  "name": "@smartprocure/node-resque",
   "description": "an opinionated implementation of resque in node",
   "license": "Apache-2.0",
-  "version": "8.3.2",
+  "version": "8.3.3",
   "homepage": "http://github.com/actionhero/node-resque",
   "repository": {
     "type": "git",
